--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
       <img src="rrr.jpeg" style="length:150px;width:100px">
       <p>Rahul Rai (Founder)</p>
       <img src="ankit.jpeg" style="length:150px;width:100px">
-      <p>Ankit Sharma (EO)</p>
+      <p>Ankit Sharma (CEO)</p>
       <img src="bsgrewal.png" style="length:150px;width:100px">
-      <p>BS Grewal (AMD)</p>
+      <p>BS Grewal (CMD)</p>
     </div>
     <div class="card">
       <img src="linkedin.jpg" width="80" height="80"><p><a href="https://www.linkedin.com/in/rahulraidgt/">Follow me linkedin.com</a></p>
