--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 <body>
 
 <div class="header">
-    <img src="LOGO.jpg" width="200" height="150">
+    <img src="LOGO.png" width="200" height="150">
   <h2>RAHUL RAI'S FOUNDATION</h2>
   
 </div>
@@ -230,7 +230,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   </div>
 </div>
 <div class="footer">
-    <img src="LOGO.jpg" width="200" height="150">
+    <img src="LOGO.png" width="200" height="150">
   <h2>© Rahul Rai's FOUNDATION ©</h2>
 </div>
 
