--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 <div class="header">
     <img src="LOGO.png" width="200" height="150">
-  <h2>RAHUL RAI'S FOUNDATION</h2>
+  <h2>RAHUL RAI'S </h2>
   
 </div>
 
@@ -231,7 +231,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 </div>
 <div class="footer">
     <img src="LOGO.png" width="200" height="150">
-  <h2>© Rahul Rai's FOUNDATION ©</h2>
+  <h2> Rahul Rai's ©</h2>
 </div>
 
 </body>
