--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ body {
 .footer {
   padding: 20px;
   text-align: center;
-  background: white;
+  background: transparent;
   margin-top: 20px;
 }
 
