--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@ body {
   padding: 30px;
   font-size: 40px;
   text-align: center;
-  background: white
-  ;
+  background: transparent;
 }
 
 /* Create two unequal columns that floats next to each other */
