--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
       <h2>Advance Diploma in information Technology, Networking & Cloud Computing (2022-24)
       </h2>
       <h5>NSTI-Dehradun, Nov 11, 2022</h5>
-      <img src="ADIT-IBM.jpeg" style="width:1000px;">
+      <img src="kausal.jpg" style="width:1000px;">
       <p>Batch2022-2024</p>
       <p> Swati Gulati(Trainer) , Trainees-Rahul Rai ,Bhagwan Singh, Sanju Kumar, Prabhash Kumar, Aman Kumar, Pravesh Kumar, Sanjay Sonkariya, Kunjesh Yadav, Gulshan Kumar Ray, Maneesh sharma, Shivam Shukla,Ramakant,Seema ,Aprajita,Kavita,Maneesha  </p>
     </div>
