--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
       </h2>
       <h5>NSTI-Dehradun, Nov 11, 2022</h5>
       <img src="kausal.jpg" style="width:1500px;">
-      <p>Batch2022-2024</p>
+      <p>Kaushal Mahotsav</p>
      
     </div>
   </div>
